--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <junit.platform.version>1.3.1</junit.platform.version>
 
         <jaxb.version>2.3.1</jaxb.version>
+        <forkCount>1C</forkCount>
     </properties>
 
     <repositories>
@@ -1285,6 +1286,15 @@
 
     <profiles>
         <profile>
+            <id>windows</id>
+            <activation>
+                <os><family>windows</family></os>
+            </activation>
+            <properties>
+                <forkCount>1</forkCount>
+            </properties>
+        </profile>
+        <profile>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -1298,9 +1308,10 @@
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
+                            <!--<argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>-->
+                            <argLine>-Xmx512m</argLine>
                             <!-- @NotThreadSafe no longer matters because we are not using threads in the forked JVMs -->
-                            <forkCount>1C</forkCount>
+                            <forkCount>${forkCount}</forkCount>
                             <!--
                                 ERROR
                                     ExecutionException The forked VM terminated without properly saying goodbye.
