--- a/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
+++ b/storage-impl-hbm/src/main/resources/jdbc-datasource/jdbc-in-memory.properties
@@ -1,22 +1,22 @@
 # H2 Database
 driverClassName=org.h2.Driver
-url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=OFF
-#url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=ON
+url=jdbc:h2:mem:exifweb-tests;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=OFF
+#url=jdbc:h2:mem:exifweb-tests;DB_CLOSE_DELAY=-1;MODE=MySQL;AUTOCOMMIT=ON
 #
 # HSQLDB (HyperSQL Database)
 #driverClassName=org.hsqldb.jdbc.JDBCDriver
-#url=jdbc:hsqldb:mem:myDb
+#url=jdbc:hsqldb:mem:exifweb-tests
 #username=sa
 #password=sa
 #
 # Apache Derby Database
 #driverClassName=org.apache.derby.jdbc.EmbeddedDriver
-#url=jdbc:derby:memory:myDb;create=true
+#url=jdbc:derby:memory:exifweb-tests;create=true
 #username=sa
 #password=sa
 #
 # SQLite Database
 #driverClassName=org.sqlite.JDBC
-#url=jdbc:sqlite:memory:myDb
+#url=jdbc:sqlite:memory:exifweb-tests
 #username=sa
 #password=sa
