servlet-mapping.* properties, WebApplicationInitializer & WebSecurityConfig logging

--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -31,3 +31,6 @@ async.timeout=7200000
 ehcache.spring.name=spring-cache
 # users properties file
 users.file=file:/home/adr/apps/etc/exiweb-users.properties
+# servlet mappings
+servlet-mapping.app=/app
+servlet-mapping.jsp=/jsp
