--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <!--
             https://projectlombok.org/download-edge
         -->
-        <lombok.version>edge-SNAPSHOT</lombok.version>
+        <!--<lombok.version>edge-SNAPSHOT</lombok.version>-->
         <lombok.version>1.18.8</lombok.version>
         <lombok-maven-plugin.version>1.18.4.0</lombok-maven-plugin.version>
 
@@ -946,35 +946,35 @@
                     </configuration>
                 </plugin>
 
-                <plugin>
-                    <groupId>org.projectlombok</groupId>
-                    <artifactId>lombok-maven-plugin</artifactId>
-                    <version>${lombok-maven-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <id>delombok</id>
-                            <phase>generate-sources</phase>
-                            <goals>
-                                <goal>delombok</goal>
-                            </goals>
-                            <configuration>
-                                <addOutputDirectory>false</addOutputDirectory>
-                                <sourceDirectory>src/main/java</sourceDirectory>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>test-delombok</id>
-                            <phase>generate-test-sources</phase>
-                            <goals>
-                                <goal>testDelombok</goal>
-                            </goals>
-                            <configuration>
-                                <addOutputDirectory>false</addOutputDirectory>
-                                <sourceDirectory>src/test/java</sourceDirectory>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
+                <!--<plugin>-->
+                <!--<groupId>org.projectlombok</groupId>-->
+                <!--<artifactId>lombok-maven-plugin</artifactId>-->
+                <!--<version>${lombok-maven-plugin.version}</version>-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>delombok</id>-->
+                <!--<phase>generate-sources</phase>-->
+                <!--<goals>-->
+                <!--<goal>delombok</goal>-->
+                <!--</goals>-->
+                <!--<configuration>-->
+                <!--<addOutputDirectory>false</addOutputDirectory>-->
+                <!--<sourceDirectory>src/main/java</sourceDirectory>-->
+                <!--</configuration>-->
+                <!--</execution>-->
+                <!--<execution>-->
+                <!--<id>test-delombok</id>-->
+                <!--<phase>generate-test-sources</phase>-->
+                <!--<goals>-->
+                <!--<goal>testDelombok</goal>-->
+                <!--</goals>-->
+                <!--<configuration>-->
+                <!--<addOutputDirectory>false</addOutputDirectory>-->
+                <!--<sourceDirectory>src/test/java</sourceDirectory>-->
+                <!--</configuration>-->
+                <!--</execution>-->
+                <!--</executions>-->
+                <!--</plugin>-->
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
