--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,18 @@
         <!--<springframework.version>4.3.14.RELEASE</springframework.version>-->
         <!--<spring-security.version>3.2.10.RELEASE</spring-security.version>-->
         <!--<spring-security.version>4.2.4.RELEASE</spring-security.version>-->
-        <springframework.version>5.1.6.RELEASE</springframework.version>
-        <spring-security.version>5.1.5.RELEASE</spring-security.version>
-        <spring-data-jpa.version>2.1.6.RELEASE</spring-data-jpa.version>
+        <springframework.version>5.2.1.RELEASE</springframework.version>
+        <spring-security.version>${springframework.version}</spring-security.version>
+        <spring-data-jpa.version>2.2.1.RELEASE</spring-data-jpa.version>
+
+        <jackson.version>2.10.0</jackson.version>
 
         <!--<hibernate.version>4.3.11.Final</hibernate.version>-->
         <!--<jackson-datatype-hibernate4.version>2.9.4</jackson-datatype-hibernate4.version>-->
-        <hibernate.version>5.2.17.Final</hibernate.version>
-        <jackson-datatype-hibernate5.version>2.9.7</jackson-datatype-hibernate5.version>
+        <hibernate.version>5.4.8.Final</hibernate.version>
+        <jackson-datatype-hibernate5.version>${jackson.version}</jackson-datatype-hibernate5.version>
+
+        <ehcache.version>2.10.6</ehcache.version>
 
         <slf4j.version>1.7.25</slf4j.version>
         <!-- sync with slf4j-parent-*.pom -->
@@ -517,6 +521,12 @@
                         <artifactId>spring-test</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+                <version>${ehcache.version}</version>
             </dependency>
 
             <dependency>
