--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
         <!--<hibernate.version>4.3.11.Final</hibernate.version>-->
         <!--<jackson-datatype-hibernate4.version>2.9.4</jackson-datatype-hibernate4.version>-->
         <hibernate.version>5.4.8.Final</hibernate.version>
-        <jackson-datatype-hibernate5.version>${jackson.version}</jackson-datatype-hibernate5.version>
 
         <ehcache.version>2.10.6</ehcache.version>
 
@@ -50,11 +49,13 @@
         <aspectj-maven-plugin.version>1.11</aspectj-maven-plugin.version>
         <!-- same as aspectjtools within aspectj-maven-plugin -->
         <aspectjrt.version>1.9.2</aspectjrt.version>
+        
         <!--
             java8 won't work with version (2.5.1, 3.7.0]
             I guess it determines also the spring-instrument-tomcat version.
         -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        
         <run-tomcat-embedded>provided</run-tomcat-embedded>
         <run-jetty>provided</run-jetty>
         <tomcat.version>7.0.64</tomcat.version>
@@ -544,12 +545,12 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <!--
                 jackson-datatype-hibernate4 depends on:
@@ -561,12 +562,12 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-hibernate5</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!--
@@ -577,17 +578,17 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.module</groupId>
                 <artifactId>jackson-module-parameter-names</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jdk8</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>${jackson-datatype-hibernate5.version}</version>
+                <version>${jackson.version}</version>
             </dependency>
 
             <dependency>
