--- a/photos/pom.xml
+++ b/photos/pom.xml
@@ -20,6 +20,10 @@
         </dependency>
         <dependency>
             <groupId>image.exifweb</groupId>
+            <artifactId>exifweb-messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>image.exifweb</groupId>
             <artifactId>storage-jpa2x-hbm-impl</artifactId>
             <!--
                 needs version because including test-jar also
@@ -40,10 +44,6 @@
         <dependency>
             <groupId>com.drewnoakes</groupId>
             <artifactId>metadata-extractor</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
