--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>image</groupId>
     <artifactId>exifweb</artifactId>
@@ -119,6 +118,12 @@
             <dependency>
                 <groupId>image.exifweb</groupId>
                 <artifactId>cdm</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>image.exifweb</groupId>
+                <artifactId>exifweb-messaging</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -1547,11 +1552,12 @@
         <!-- cdm = common data model -->
         <module>cdm</module>
         <module>storage-entities</module>
+        <module>exifweb-messaging</module>
         <module>storage-api</module>
         <module>storage-impl-hbm</module>
         <module>storage-jpa2x-hbm-impl</module>
         <!-- photos = business logic -->
         <module>photos</module>
         <module>webapp</module>
-    </modules>
+  </modules>
 </project>
