--- a/exifweb-messaging/pom.xml
+++ b/exifweb-messaging/pom.xml
@@ -29,6 +29,10 @@
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
