--- a/webapp/src/main/resources/exifweb.properties
+++ b/webapp/src/main/resources/exifweb.properties
@@ -34,3 +34,5 @@ users.file=file:/home/adr/apps/etc/exiweb-users.properties
 # servlet mappings
 servlet-mapping.app=/app
 servlet-mapping.jsp=/jsp
+# mkvExtractor
+mkvExtractor=/home/adr/subtitles-extractor-1.0-SNAPSHOT.sh
