pom.xml: junit jupiter refactor hamcrest update from 1.3 to 2.2 maven-failsafe-plugin: excluding <groups>controller</groups> to configuration maven-surefire-plugin: adding <environmentVariables ... spring.profiles.active> to configuration db-off profile: removed maven-surefire-plugin plugin override db-on, production-only profile: simplified maven-surefire-plugin plugin override remove <artifactId>maven-surefire-plugin</artifactId> configuration from maven modules

--- a/photos/pom.xml
+++ b/photos/pom.xml
@@ -144,12 +144,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration combine.self="append">
-                    <!--<argLine>-Dspring.profiles.active=jdbc-ds</argLine>-->
-                    <environmentVariables>
-                        <!-- for catching tests without proper spring profile annotation -->
-                        <spring.profiles.active>fake-profile</spring.profiles.active>
-                    </environmentVariables>
+                <configuration>
                     <!--<groups>${junit4.photos.groups}</groups>-->
                     <groups>${junit5.photos.groups}</groups>
                     <!--<properties>-->
