--- a/storage-jpa2x-hbm-impl/pom.xml
+++ b/storage-jpa2x-hbm-impl/pom.xml
@@ -152,13 +152,8 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration combine.self="append">
-                    <environmentVariables>
-                        <!-- spring profile for tests without proper spring profile annotation -->
-                        <spring.profiles.active>fake-profile</spring.profiles.active>
-                    </environmentVariables>
+                <configuration>
                     <groups>${junit5.storage-jpa2x-hbm-impl.groups}</groups>
                 </configuration>
             </plugin>
