--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -321,12 +321,7 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration combine.self="append">
-                    <!--<argLine>-Dspring.profiles.active=jdbc-ds</argLine>-->
-                    <environmentVariables>
-                        <!-- for catching tests without proper spring profile annotation -->
-                        <spring.profiles.active>fake-profile</spring.profiles.active>
-                    </environmentVariables>
+                <configuration>
                     <groups>${junit5.webapp.groups}</groups>
                     <!--<properties>-->
                     <!--<includeTags>MiscTestCategory</includeTags>-->
