webapp: using <reuseForks>true</reuseForks>

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -331,7 +331,7 @@
                     <!--<includeTags>junit5&amp;photos&amp;json</includeTags>-->
                     <!--<includeTags>junit5&amp;photos&amp;misc</includeTags>-->
                     <!--</properties>-->
-                    <!--<reuseForks>true</reuseForks>-->
+                    <reuseForks>true</reuseForks>
                 </configuration>
             </plugin>
 
