AlbumImporterServiceTest comments StringToProcessBuilderConverter: moved from image.exifweb.util.converters to image.photos.util.conversion

--- a/pom.xml
+++ b/pom.xml
@@ -990,6 +990,9 @@
                     <executions>
                         <execution>
                             <goals>
+                                <!--
+                                    Generated only after running tests!
+                                -->
                                 <goal>test-jar</goal>
                             </goals>
                         </execution>
