ImageUpdateRepositoryImpl: ImageEvent changeName() jpa2x: depending on exifweb-messaging

--- a/storage-jpa2x-hbm-impl/pom.xml
+++ b/storage-jpa2x-hbm-impl/pom.xml
@@ -18,6 +18,10 @@
     <dependencies>
         <dependency>
             <groupId>image.exifweb</groupId>
+            <artifactId>exifweb-messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>image.exifweb</groupId>
             <artifactId>util</artifactId>
         </dependency>
         <dependency>
