--- a/pom.xml
+++ b/pom.xml
@@ -1012,6 +1012,7 @@
                         </execution>
                     </executions>
                     <configuration>
+                        <skipAfterFailureCount>1</skipAfterFailureCount>
                         <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                         <forkCount>1C</forkCount>
                         <reuseForks>false</reuseForks>
@@ -1035,6 +1036,7 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <!-- combine.children="merge" is the default -->
                     <configuration>
+                        <skipAfterFailureCount>1</skipAfterFailureCount>
                         <argLine>-Xmx512m -XX:MetaspaceSize=256m</argLine>
                         <!--
                             https://stackoverflow.com/questions/26882936/why-does-springjunit4classrunner-not-work-with-surefire-parallel-methods
@@ -1482,8 +1484,8 @@
         <module>cdm</module>
         <module>storage-entities</module>
         <module>exifweb-messaging</module>
-<!--        <module>storage-api</module>-->
-<!--        <module>storage-impl-hbm</module>-->
+        <!--        <module>storage-api</module>-->
+        <!--        <module>storage-impl-hbm</module>-->
         <module>storage-jpa2x-hbm-impl</module>
         <!-- photos = business logic -->
         <module>photos</module>
